--- a/lists/templates/my_lists.html
+++ b/lists/templates/my_lists.html
@@ -10,5 +10,11 @@
         {% for list in owner.list_set.all %}
             <li><a href="{{ list.get_absolute_url }}">{{ list.name }}</a></li>
         {% endfor %}
+    </ul>
+    <ul>
+        {% for list in owner.shared_lists.all %}
+            <li><a href="{{ list.get_absolute_url }}">{{ list.name }}</a></li>
+        {% endfor %}
+    </ul>
 {% endblock %}
 
